12/05/2025	20:40	Daniele Chiarion	Add optional section for admin
13/05/2025	10:19	Daniele Chiarion	Add html page to test if all the elements are ready
13/05/2025	11:06	Daniele Chiarion	Change the admin settings page with the choice of the file
13/05/2025	11:06	Daniele Chiarion	Add carousel with images in the car details
21/05/2025	18:39	Daniele Chiarion	Add .js code for pagination and spacer between footers and navbars. 
23/05/2025	17:56	Daniele Chiarion	Add .js code to show the sliders value on the configurator page.
23/05/2025	17:12	Daniele Chiarion	Do the same thing done before for the admin add-items page. 
23/05/2025	17:55	Daniele Chiarion	Add .js to remember the previous page. 
25/05/2025	14:55	Daniele Chiarion	Completed .js backend for car elements and vehicles.
25/05/2025	15:10	Daniele Chiarion	Completed .js backend for operation (only purchase is now necessary)
25/05/2025	15:35	Daniele Chiarion	Completed .js backend part for user and account functions.
25/05/2025	16:00	Daniele Chiarion	Completed .js backend class to manage a showroom.
25/05/2025	16:11	Daniele Chiarion	Completed .js backend class to manage the users.
25/05/2025	16:27	Daniele Chiarion	Add backend methods to save and load classes using the localStorage.
26/05/2025	17:05	Daniele Chiarion	Add toJSON and fromJSON method for each class to be saved on localStorage.
26/05/2025	17:49	Daniele Chiarion	Add login and logout function.
26/05/2025	18:28	Daniele Chiarion	Add custom-navbar .js code.
26/05/2025	18:48	Daniele Chiarion	Add .js to manage sign-up page.
27/05/2025	11:20	Daniele Chiarion	Add .js code for the admin to add car.
27/05/2025	20:04	Daniele Chiarion	Completed .js code to add items for the admin.
27/05/2025	20:59	Daniele Chiarion	Completed .js code to get the correct carousel starting from the device size.
28/05/2025	08:53	Daniele Chiarion	Add backed part with methods to show cars in the home page based on the user preferences.